adding some images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <h2>Guarde seus furtos para mais tarde</h2>
         <p>Carregue um caderno e uma caneta com você aonde quer que vá. Acostume-se a sacá-los e a tomar nota dos seus pensamentos e observações. Copie suas passagens favoritas dos livros. Grave conversas que ouviu por aí.</p>
     </section>
+    
+    <picture>
+      <img src="img/img001.jpeg" alt="">
+    </picture>
 
     <section>
         <h1>2 - Não espere até saber quem você é para poder começar</h1>
@@ -34,21 +38,31 @@
         <p>Pela minha experiência, é no ato de criar e de fazer nosso trabalho que descobrimos quem somos.</p>
         <p>Você está pronto. Comece a fazer.</p>
         <p>Você pode estar com medo de começar. Isso é natural. Existe essa ameaça muito real para todo mundo que é bem-educado. Chama-se “síndrome do impostor”. A definição clínica é “fenômeno psicológico no qual as pessoas ficam incapazes de internalizar suas reações”.</p>
-        <p>[inserir imagem]</p>
     </section>
+
+    <picture>
+      <img src="img/img002.jpg" alt="">
+    </picture>
 
     <section>
         <h1>3 - Escreva o livro que você quer ler</h1>
           <p>O manifesto é esse: desenhe a arte que você quer ver, comece o negócio que você quer gerir, toque a música que você quer ouvir, escreva os livros que quer ler, crie os produtos que quer usar - faça o trabalho que você quer ver pronto.</p>
     </section>
 
+    <picture>
+      <img src="img/img003.png" alt="">
+    </picture>
+
     <section>
         <h1>4 - Use as mãos</h1>
           <p>Foi só quando comecei a trazer ferramentas analógicas de volta ao meu processo, que fazer coisas tornou-se divertido de novo e meu trabalho começou a melhorar.</p>
           <p>O computador é muito bom para editar suas ideias, e é muito bom para deixá-las prontas para publicar e lançá-las ao mundo, mas não é muito bom para gerar ideias.</p>
           <p>Tenho duas mesas no meu escritório - uma é “analógica” e a outra é “digital”.</p>
-          <p>[Inserir imagem]</p>
     </section>
+
+    <picture>
+      <img src="img/img004.jpg" alt="">
+    </picture>
 
     <section>
         <h1>5 - Projetos paralelos e hobbies são importantes</h1>
@@ -57,6 +71,10 @@
           <p>Faça uma longa caminhada.</p>
           <p>É importante ter um hobby. Um hobby é algo criativo que é só para você. Você não tenta ganhar dinheiro ou ficar famoso com isso faz apenas porque o deixa feliz. Um hobby é algo que dá e não tira. Enquanto minha arte é para todo mundo ver, a música é só para mim e meus amigos. Nos encontramos todo domingo e fazemos barulho por algumas horas. Sem pressão, sem planos. É regenerativo. É como um culto.</p>
     </section>
+
+    <picture>
+      <img src="img/img005.png" alt="">
+    </picture>
 
     <section>
         <h1>6 - O segredo: Faça um bom trabalho e compartilhe-o com as pessoas</h1>
@@ -69,6 +87,10 @@
           <p>Você não tem que compartilhar tudo - na verdade, às vezes é melhor não. Mostre apenas um pouco do que está fazendo. Compartilhe um esboço, um rabisco ou fragmento. Compartilhe um vislumbre do seu processo. Pense sobre o que você tem a compartilhar que seria de valor para as pessoas. Compartilhe uma dica conveniente que você aprendeu trabalhando. Ou um link para um artigo interessante. Mencione um livro bom que esteja lendo.</p>
     </section>
 
+    <picture>
+      <img src="img/img006.png" alt="">
+    </picture>
+
     <section>
         <h1>7 - A geografia não manda mais em nós</h1>
          <h2>Construa seu próprio mundo</h2>
@@ -77,12 +99,20 @@
           <p>Em algum momento, quando você puder, saia de casa. Seu cérebro fica confortável demais no cotidiano que o cerca. Você precisa deixá-lo desconfortável.</p>
     </section>
 
+    <picture>
+      <img src="img/img007.jpg" alt="">
+    </picture>
+
     <section>
         <h1>8 - Seja legal. (O mundo é uma cidade pequena.)</h1>
           <p>“Pare de procurar briga e vá fazer alguma coisa.”</p>
             <h2>Mantenha um arquivo de aplausos.</h2>
               <p>Coloco todo e-mail legal que recebo numa pasta especial. Quando aqueles dias sombrios chegam e eu precisa de uma força, abro a pasta especial e leio alguns e-mails.</p>
     </section>
+
+    <picture>
+      <img src="img/img008.jpg" alt="">
+    </picture>
 
     <section>
         <h1>9 - Seja chato. (É a única maneira de terminar um trabalho</h1>
@@ -102,7 +132,9 @@
            <p>Assim como você precisa de um registro dos acontecimentos futuros, precisa também de um registro dos acontecimentos passados. Como um pequeno livro onde você lista as coisas que faz todo dia. Em qual projeto trabalhou, onde foi almoçar, a qual filme assistiu. É bem mais fácil do que manter um diário detalhado, você ficará surpreso com o quanto um diário de registros como esse pode ser útil. Especialmente ao longo de vários anos. Os pequenos detalhes ajudarão você a lembrar-se dos grandes detalhes.</p>
            <p>Em outros tempos, um diário de bordo era um lugar para marinheiros manterem-se cientes do quanto haviam viajado, e é exatamente isso que você está fazendo - acompanhando o quanto seu navio já navegou.</p>
            <p>“Se você se pergunta ‘qual foi a melhor coisa que aconteceu hoje?’, isso força um tipo de retrospectiva agradável, que vem das coisas sobre as quais você poderia escrever, coisas nas quais, de outro jeito, você não teria pensando. Se você se pergunta ‘o que aconteceu hoje?’, é bem provável que vá lembrar da pior coisa, porque teve que lidar com ela - teve que se apressar até algum lugar ou alguém te disse algo ruim. Mas se perguntar qual foi a melhor coisa, será uma forma particular de lembrar como a luz entrava, ou alguma expressão incrível que alguém disse, ou uma salada especialmente deliciosa”. - Nicholson Baker</p>
-           <p>[Inserir Imagem]</p>  
+           <picture>
+            <img src="img/img009.png" alt="">
+           </picture> 
     </section>
 
     <footer>
