--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 <body>
    <header>
-      <h1>Roube como um artista</h1>
+     <picture>
+      <source media="(max-width: 750px)" srcset="img/title-p.png">
+       <img src="img/title-m.png" alt="título do livro">
+     </picture>
        <p>Autor <a href="https://austinkleon.com/" target="_blank">Austin Kleon</a></p>
    </header> 
 
    <body>
      
-    <section>
+    <section class="chapter_one">
        <h1> 1 - Roube como um artista</h1>
         <h2>Nada é original.</h2>
         <p>Está lá na bíblia: “Não há nada de novo debaixo do sol.” (Eclisiastes 1:9).</p>
@@ -26,57 +29,52 @@
         <p>Colecione livros, mesmo que não planeje lê-los no momento. O cineasta John Waters falou: “Nada é mais importante do que uma biblioteca não lida.”</p>
         <h2>Guarde seus furtos para mais tarde</h2>
         <p>Carregue um caderno e uma caneta com você aonde quer que vá. Acostume-se a sacá-los e a tomar nota dos seus pensamentos e observações. Copie suas passagens favoritas dos livros. Grave conversas que ouviu por aí.</p>
+        <picture>
+          <img src="img/img001.jpeg" alt="">
+        </picture>
     </section>
-    
-    <picture>
-      <img src="img/img001.jpeg" alt="">
-    </picture>
 
-    <section>
+    <section class="chapter_two">
         <h1>2 - Não espere até saber quem você é para poder começar</h1>
         <h2>Faça, conheça a ti mesmo.</h2>
         <p>Pela minha experiência, é no ato de criar e de fazer nosso trabalho que descobrimos quem somos.</p>
         <p>Você está pronto. Comece a fazer.</p>
         <p>Você pode estar com medo de começar. Isso é natural. Existe essa ameaça muito real para todo mundo que é bem-educado. Chama-se “síndrome do impostor”. A definição clínica é “fenômeno psicológico no qual as pessoas ficam incapazes de internalizar suas reações”.</p>
+        <picture>
+          <img src="img/img002.jpg" alt="">
+        </picture>
     </section>
 
-    <picture>
-      <img src="img/img002.jpg" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_three">
         <h1>3 - Escreva o livro que você quer ler</h1>
           <p>O manifesto é esse: desenhe a arte que você quer ver, comece o negócio que você quer gerir, toque a música que você quer ouvir, escreva os livros que quer ler, crie os produtos que quer usar - faça o trabalho que você quer ver pronto.</p>
+        <picture>
+          <img src="img/img003.png" alt="">
+        </picture>  
     </section>
 
-    <picture>
-      <img src="img/img003.png" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_four">
         <h1>4 - Use as mãos</h1>
           <p>Foi só quando comecei a trazer ferramentas analógicas de volta ao meu processo, que fazer coisas tornou-se divertido de novo e meu trabalho começou a melhorar.</p>
           <p>O computador é muito bom para editar suas ideias, e é muito bom para deixá-las prontas para publicar e lançá-las ao mundo, mas não é muito bom para gerar ideias.</p>
           <p>Tenho duas mesas no meu escritório - uma é “analógica” e a outra é “digital”.</p>
+          <picture>
+            <img src="img/img004.jpg" alt="">
+          </picture>
     </section>
 
-    <picture>
-      <img src="img/img004.jpg" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_five">
         <h1>5 - Projetos paralelos e hobbies são importantes</h1>
           <p>Acho que é bom ter vários projetos caminhando ao mesmo tempo para que você possa saltar entre eles. Quando enjoar de um projeto, pule para outro, e quando estiver enjoada deste, pule para o projeto anterior. Pratique a procastinação produtiva”.</p>
           <p>Pessoas criativas precisam de tempo para sentar e não fazer nada.</p>
           <p>Faça uma longa caminhada.</p>
           <p>É importante ter um hobby. Um hobby é algo criativo que é só para você. Você não tenta ganhar dinheiro ou ficar famoso com isso faz apenas porque o deixa feliz. Um hobby é algo que dá e não tira. Enquanto minha arte é para todo mundo ver, a música é só para mim e meus amigos. Nos encontramos todo domingo e fazemos barulho por algumas horas. Sem pressão, sem planos. É regenerativo. É como um culto.</p>
+          <picture>
+            <img src="img/img005.png" alt="">
+          </picture>
     </section>
 
-    <picture>
-      <img src="img/img005.png" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_six">
         <h1>6 - O segredo: Faça um bom trabalho e compartilhe-o com as pessoas</h1>
           <p>Pouco depois, você aprende que a maior parte do mundo não liga necessariamente para o que você pensa. Soa brutal, mas é verdade, com o escritor Steven Pressfield diz: “Não é que as pessoas sejam más ou cruéis, elas só estão ocupadas.”</p>
           <p>Faça um bom trabalho e compartilhe-o com as pessoas.</p>
@@ -85,36 +83,33 @@
           <p>A internet pode ser algo mais do que só um lugar de descanso para publicar suas ideias finalizadas - pode ser também uma incubadora para ideias que não estão completamente formadas.</p>
           <p>Aprenda a mexer com códigos. Entenda como fazer um site. Entenda como blogar. Entenda o twitter, as mídias sociais e todas essas coisas. Encontre pessoas na internet que amem as mesmas coisas que você e conecte-se a elas. Compartilhe coisas com elas.</p>
           <p>Você não tem que compartilhar tudo - na verdade, às vezes é melhor não. Mostre apenas um pouco do que está fazendo. Compartilhe um esboço, um rabisco ou fragmento. Compartilhe um vislumbre do seu processo. Pense sobre o que você tem a compartilhar que seria de valor para as pessoas. Compartilhe uma dica conveniente que você aprendeu trabalhando. Ou um link para um artigo interessante. Mencione um livro bom que esteja lendo.</p>
+          <picture>
+            <img src="img/img006.png" alt="">
+          </picture>
     </section>
 
-    <picture>
-      <img src="img/img006.png" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_seven">
         <h1>7 - A geografia não manda mais em nós</h1>
          <h2>Construa seu próprio mundo</h2>
           <p>Enquanto isso, se você não está envolvido com o mundo em que vive, pode construir o seu proprio. (Agora seria um bom momento para colocar seus fones de ouvido e dexar no gatilho a música “In my room”, dos Beach Boys.) Cerque-se de livros e objetos que ama. Pregue coisas na parede. Crie seu próprio mundo.</p>
           <p>Sempre carrego um livro, uma caneta e um caderno de anotações.</p>
           <p>Em algum momento, quando você puder, saia de casa. Seu cérebro fica confortável demais no cotidiano que o cerca. Você precisa deixá-lo desconfortável.</p>
+          <picture>
+            <img src="img/img007.jpg" alt="">
+          </picture>
     </section>
 
-    <picture>
-      <img src="img/img007.jpg" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_eight">
         <h1>8 - Seja legal. (O mundo é uma cidade pequena.)</h1>
           <p>“Pare de procurar briga e vá fazer alguma coisa.”</p>
             <h2>Mantenha um arquivo de aplausos.</h2>
               <p>Coloco todo e-mail legal que recebo numa pasta especial. Quando aqueles dias sombrios chegam e eu precisa de uma força, abro a pasta especial e leio alguns e-mails.</p>
+              <picture>
+                <img src="img/img008.jpg" alt="">
+              </picture>
     </section>
 
-    <picture>
-      <img src="img/img008.jpg" alt="">
-    </picture>
-
-    <section>
+    <section class="chapter_nine">
         <h1>9 - Seja chato. (É a única maneira de terminar um trabalho</h1>
          <h2>Cuide de você.</h2>
            <p>Tome o café da manhã. Faça umas flexões. Faça longas caminhadas. Durma bastante.</p>
