updating the images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/artist.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Roube como um artista</title>
 </head>
 <body>
@@ -30,7 +30,8 @@
         <h2>Guarde seus furtos para mais tarde</h2>
         <p>Carregue um caderno e uma caneta com você aonde quer que vá. Acostume-se a sacá-los e a tomar nota dos seus pensamentos e observações. Copie suas passagens favoritas dos livros. Grave conversas que ouviu por aí.</p>
         <picture>
-          <img src="img/img001.jpeg" alt="">
+          <source media="(max-width: 750px)" srcset="img/chapter_img/img01-p.png" type="image/png">
+          <img src="img/chapter_img/img01-m.png" alt="Imagem Capítulo 1">
         </picture>
     </section>
 
@@ -41,7 +42,8 @@
         <p>Você está pronto. Comece a fazer.</p>
         <p>Você pode estar com medo de começar. Isso é natural. Existe essa ameaça muito real para todo mundo que é bem-educado. Chama-se “síndrome do impostor”. A definição clínica é “fenômeno psicológico no qual as pessoas ficam incapazes de internalizar suas reações”.</p>
         <picture>
-          <img src="img/img002.jpg" alt="">
+          <source media="(max-width: 750px)" srcset="img/chapter_img/img02-p.png" type="image/png">
+          <img src="img/chapter_img/img02-m.png" alt="Imagem Capítulo 2">
         </picture>
     </section>
 
@@ -49,7 +51,8 @@
         <h1>3 - Escreva o livro que você quer ler</h1>
           <p>O manifesto é esse: desenhe a arte que você quer ver, comece o negócio que você quer gerir, toque a música que você quer ouvir, escreva os livros que quer ler, crie os produtos que quer usar - faça o trabalho que você quer ver pronto.</p>
         <picture>
-          <img src="img/img003.png" alt="">
+          <source media="(max-width: 750px)" srcset="img/chapter_img/img03-p.png" type="image/png">
+          <img src="img/chapter_img/img03-m.png" alt="Imagem Capítulo 3">
         </picture>  
     </section>
 
@@ -59,7 +62,8 @@
           <p>O computador é muito bom para editar suas ideias, e é muito bom para deixá-las prontas para publicar e lançá-las ao mundo, mas não é muito bom para gerar ideias.</p>
           <p>Tenho duas mesas no meu escritório - uma é “analógica” e a outra é “digital”.</p>
           <picture>
-            <img src="img/img004.jpg" alt="">
+            <source media="(max-width: 750px)" srcset="img/chapter_img/img04-p.png" type="image/png">
+            <img src="img/chapter_img/img04-m.png" alt="Imagem Capítulo 4">
           </picture>
     </section>
 
@@ -70,7 +74,8 @@
           <p>Faça uma longa caminhada.</p>
           <p>É importante ter um hobby. Um hobby é algo criativo que é só para você. Você não tenta ganhar dinheiro ou ficar famoso com isso faz apenas porque o deixa feliz. Um hobby é algo que dá e não tira. Enquanto minha arte é para todo mundo ver, a música é só para mim e meus amigos. Nos encontramos todo domingo e fazemos barulho por algumas horas. Sem pressão, sem planos. É regenerativo. É como um culto.</p>
           <picture>
-            <img src="img/img005.png" alt="">
+            <source media="(max-width: 750px)" srcset="img/chapter_img/img05-p.png" type="image/png">
+            <img src="img/chapter_img/img05-m.png" alt="Imagem Capítulo 5">
           </picture>
     </section>
 
@@ -84,7 +89,8 @@
           <p>Aprenda a mexer com códigos. Entenda como fazer um site. Entenda como blogar. Entenda o twitter, as mídias sociais e todas essas coisas. Encontre pessoas na internet que amem as mesmas coisas que você e conecte-se a elas. Compartilhe coisas com elas.</p>
           <p>Você não tem que compartilhar tudo - na verdade, às vezes é melhor não. Mostre apenas um pouco do que está fazendo. Compartilhe um esboço, um rabisco ou fragmento. Compartilhe um vislumbre do seu processo. Pense sobre o que você tem a compartilhar que seria de valor para as pessoas. Compartilhe uma dica conveniente que você aprendeu trabalhando. Ou um link para um artigo interessante. Mencione um livro bom que esteja lendo.</p>
           <picture>
-            <img src="img/img006.png" alt="">
+            <source media="(max-width: 750px)" srcset="img/chapter_img/img06-p.png" type="image/png">
+            <img src="img/chapter_img/img06-m.png" alt="Imagem Capítulo 6">
           </picture>
     </section>
 
@@ -95,7 +101,8 @@
           <p>Sempre carrego um livro, uma caneta e um caderno de anotações.</p>
           <p>Em algum momento, quando você puder, saia de casa. Seu cérebro fica confortável demais no cotidiano que o cerca. Você precisa deixá-lo desconfortável.</p>
           <picture>
-            <img src="img/img007.jpg" alt="">
+            <source media="(max-width: 750px)" srcset="img/chapter_img/img07-p.png" type="image/png">
+            <img src="img/chapter_img/img07-m.png" alt="Imagem Capítulo 7">
           </picture>
     </section>
 
@@ -105,7 +112,8 @@
             <h2>Mantenha um arquivo de aplausos.</h2>
               <p>Coloco todo e-mail legal que recebo numa pasta especial. Quando aqueles dias sombrios chegam e eu precisa de uma força, abro a pasta especial e leio alguns e-mails.</p>
               <picture>
-                <img src="img/img008.jpg" alt="">
+                <source media="(max-width: 750px)" srcset="img/chapter_img/img08-p.png" type="image/png">
+                <img src="img/chapter_img/img08-m.png" alt="Imagem Capítulo 8">
               </picture>
     </section>
 
@@ -128,7 +136,8 @@
            <p>Em outros tempos, um diário de bordo era um lugar para marinheiros manterem-se cientes do quanto haviam viajado, e é exatamente isso que você está fazendo - acompanhando o quanto seu navio já navegou.</p>
            <p>“Se você se pergunta ‘qual foi a melhor coisa que aconteceu hoje?’, isso força um tipo de retrospectiva agradável, que vem das coisas sobre as quais você poderia escrever, coisas nas quais, de outro jeito, você não teria pensando. Se você se pergunta ‘o que aconteceu hoje?’, é bem provável que vá lembrar da pior coisa, porque teve que lidar com ela - teve que se apressar até algum lugar ou alguém te disse algo ruim. Mas se perguntar qual foi a melhor coisa, será uma forma particular de lembrar como a luz entrava, ou alguma expressão incrível que alguém disse, ou uma salada especialmente deliciosa”. - Nicholson Baker</p>
            <picture>
-            <img src="img/img009.png" alt="">
+            <source media="(max-width: 750px)" srcset="img/chapter_img/img09-p.png" type="image/png">
+            <img src="img/chapter_img/img09-m.png" alt="Imagem Capítulo 9">
            </picture> 
     </section>
 
